<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="entrance_hello_blank_fragment">Hello blank fragment</string>
    <string name="entrance_text_view_login">Sign In</string>
    <string name="entrance_text_hint_email_login">Email</string>
    <string name="entrance_text_hint_password_login">Senha</string>
    <string name="entrance_text_view_reset_password">Esqueceu sua senha?</string>
    <string name="entrance_text_view_button_enter_login">ENTRAR</string>
    <string name="entrance_text_view_button_enter_login_google">ENTRAR COM O GOOGLE</string>
    <string name="entrance_text_view_not_a_user">Não é usuário?</string>
    <string name="entrance_text_view_register_user">Cadastre-se</string>
</resources>